# nherformer

./: .gitignore  README.md  pyproject.toml  tasks.py
nherformer/experiments/: test_transformer.ipynb
nherformer/prod/: config.py  modal.py  transformer_medium.py  transformer_simple.py
nherformer/prod/utils/: helper_funcs.py
