[tool.poetry]
name = "nherformer"
version = "0.1.0"
description = ""
authors = ["Nicolai Herforth <nicolaiherforth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
tiktoken = "^0.5.1"
numpy = "^1.26.2"
einops = "^0.7.0"
modal = "^0.55.4106"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
